003-traffic-in-out-mesh/examples/name-vs-fault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: name-route
spec:
  hosts:
  - name
  gateways:
  - mesh
  http:
  - fault:
      delay:
        percent: 100
        fixedDelay: 0.5s
    route:
    - destination:
        host: name
        subset: name-v1
